# tc_tests_ui_api

./: .env  README.md  conftest.py  pyproject.toml
constants/: read_env.py
locators/: mobile_locators.py  web_locators.py
models/: api_models.py  authorisation_model.py  tabs_model.py
notifications/: config.json
pages/: authorization_page.py  basket_page.py  menu_page.py  start_page.py
shemas/: reqres.py
test/: test_api.py  test_tc.py
tests/: tests_tc.py  vk_tests.py
utils/: attach.py  data_for_capabilities.py  switch_to_window.py
